@@ -2,6 +2,15 @@
 
 	* devhelp.schemas.in:
 	* src/dh-preferences.h:
+	* src/dh-window.c: (window_init), (window_populate),
+	(window_save_state), (window_restore_state), (dh_window_new):
+	- Make the maximized stuff a boolean instead of storing window state.
+	- Fixes #137532
+
+2004-03-17  Mikael Hallendal  <micke@imendio.com>
+
+	* devhelp.schemas.in:
+	* src/dh-preferences.h:
 	* src/dh-window.c: 
 	- Save state regarding maximized or not.
 	- Patch by Paolo Borelli.
